# magic

./: FAQ.md  README.md  build.bat
source/: CMakeLists.txt
source/reversed_integer/: main.cpp
